# SDN-distributed-controllers

./: README.md  controllerz1.py  controllerz2.py  controllerz3.py  network.py  put.py  runcontrollers.sh  send_pkt.py  tpm
hybrid/: controllerz1.py  controllerz2.py  controllerz3.py  data.csv  prova.py  runcontrollers.sh
measurement/python/: conf.json5  getter.py  launch.sh  peer.py
measurement/rust/: conf.json5  data.csv  debug.csv  getter.sh  launch.sh  launch_routed.sh  peers.sh  plot.py  test.sh  test_replydelay.sh  test_setpeers.sh  test_variablepeers.sh
measurement/rust/getter/: Cargo.toml
measurement/rust/getter/src/: main.rs
measurement/rust/peer/: Cargo.toml
measurement/rust/peer/src/: main.rs
measurement/rust/prova/128peer/: 100gets.csv  10gets.csv  1gets.csv
measurement/rust/prova/256peer/: 1gets.csv
measurement/rust/prova/32peer/: 100gets.csv  10gets.csv  1gets.csv  1kgets.csv
measurement/rust/prova/64peer/: 100gets.csv  10gets.csv  1gets.csv  infgets.csv
measurement/rust/variabledelay/: plot.py
measurement/rust/variabledelay/100peer100getter/: 10gets.csv  (+1 more)
measurement/rust/variablepeers/: plot.py
measurement/rust/variablepeers_routed/: plot.py  plot_span.py
reactive/: 1-3.csv  c1.sh  c2.sh  c3.sh  controllerz1.py  controllerz2.py  controllerz3.py  data.csv  prova.py
reactive/measurements/: 1000pkts.csv  100pkts.csv  10pkts.csv  1pkts.csv  2000pkts.csv  200pkts.csv  20pkts.csv  2pkts.csv  3000pkts.csv  300pkts.csv  30pkts.csv  3pkts.csv  400pkts.csv  40pkts.csv  4pkts.csv  data.csv  dataset_final.csv  infpkts.csv  prova.py  thr.py
(+1306 files in other folders)
